--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -1,38 +1,67 @@
-
 form {
-    border: 1px solid black;
-    border-radius: 5px;
-    margin: auto;
-    margin-top: 40px;
-    padding: 50px;
-  }
-  
-  input[type=email], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-sizing: border-box;
-  }
-  input[type=checkbox]{
-    padding: auto;
-  }
-  
-  button {
-    background-color: #04aa6d;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    border-radius: 10px;
-  }
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin-top: 30px;
+}
 
-  button:hover {
-    opacity: 0.8;
-  }
+input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 
+.link{
+  text-decoration: none;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+.Toastify__toast--success {
+  background-color: #4caf50; 
+  color: white;
+}
+
+.Toastify__toast--error {
+  background-color: #f44336; 
+  color: white;
+}
+
+.Toastify__toast-container {
+  top: 20px;
+  display: inline-block; 
+  text-align: center;     
+  width:auto;  
+  padding: 10px 20px; 
+  max-width: 100%;
+ 
+        
+}
+
+.Toastify__toast {
+  display: inline-block;       
+  white-space: normal;  
+  font-size: 16px;         
+  text-align: center; 
+  max-width: 100%;        
+      
+}
 
