--- a/client/src/Components/Modal/Modal.css
+++ b/client/src/Components/Modal/Modal.css
@@ -21,20 +21,27 @@
  .form-title-container{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+   
+}
+
+.form-title-container h3{
+    white-space: nowrap;
 }
 
 .form-title-container button{
     border: none;
-    background-color: transparent;
     font-size: 20px;
-   
-  
+    color: black;
+      
 }
 
-.form-title-container button:active{
-   color:rgb(255,50,50);
-  
-}
+.form-title-container button:hover{
+    transform: scale(1.2); 
+    color:rgb(255,50,50);
+    opacity: 2.8; 
+   
+ }
 
 .modal form{
     display: flex;
@@ -51,6 +58,7 @@ input{
     padding: 12px 16px;
     border-radius: 12px;
     border: 1.5px solid rgb(230,232,236);
+    width: 380px;
 
 }
 
